src/test/deca/context/invalid/Objet/protected_selection2.des
The type of the expression to which the selection is applied must be a subtype of the current class